# coremail-log-analyzer

./: README.md  coremail-logs.cabal
Diamond/: LevelDB.hi  LogRecord.hs  Redis.hs
Diamond/Analytics/: Statistics.hs
Diamond/Mongo/: Action.hs  Doc.hs  Json.hs  PyAPI.hs
Diamond/Parser/: DALog.hs  DALogParser.hi  MTALog.hs  MTALogParser.hi
Diamond/Streams/: LogFile.hs  LogFileStream.hi
Diamond/Utils/: DateTime.hi  DateTime.hs
deploy/: config.py
web/: server.py
web/views/: graph.tpl  index.tpl
web/www/: index.html~
web/www/css/: my.css
web/www/js/: fileupload.js  main.js  main2.js
worker/: Main.hs
